# pybind11_opencv_numpy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Readme.md  example.cpp  example.py  ndarray_converter.cpp  ndarray_converter.h  pybind11_opencv_typecaster.h  pybind11_opencv_typecaster.hpp  pybind11_opencv_typecaster_v2.h  setup.py  test.py
example/: __init__.py
tests/: __init__.py  test.py  test_binding.py  test_old.py  test_return.py  test_slice.py  test_type.py  utils.py
tests/cpp/: test.cpp
